--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,10 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+  <div id="top-nav-bar" class="large">
+    <div id="top-nav-content">
+    </div>
+  </div>
 <%= yield %>
 
 </body>
