--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,15 @@
 <body>
   <div id="top-nav-bar" class="large">
     <div id="top-nav-content">
+      <%= image_tag 'logo-yellow-trans', class: 'logo', alt: 'Doodles Academy' %>
+      <ul id="top-nav-menu">
+        <li>Our Story</li>
+        <li>Donate</li>
+        <li>Sample</li>
+        <li>Contact</li>
+        <li>Our Board</li>
+        <li>Sign up</li>
+      </ul>
     </div>
   </div>
 <%= yield %>
