--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,46 @@
+<% content_for(:nav_size_class) { 'large' } %>
 <div class="homepage">
   <section class="hero">
+    <div class="window-box">
+      <p>Our mission is to provide the tools necessary for art lessons that inspire students to meet their creative potential.</p>
+    </div>
+  </section>
 
+  <section class="founder text-right">
+    <h2>The Founder</h2>
+    <div class="section-sidebar">
+      <%= image_tag 'founder-section-sidebar', alt: 'The Founder' %>
+    </div>
+    <div class="section-text">
+      <p>Fresh out of graduate school, Doodles' founder Tempest NeuCollins was navigating the art instructors' world of New York City... from train to train, through and outside of, and back into Manhattan, she was trying to maximize her reach as an art teacher. Through private classes, to ad-hoc programs in Title I schools who could only afford a piece-meal program at the time, Tempest saw the spectrum of arts education in New York City: incredibly costly and individualized or over-crowded with little opportunity for differentiation. It wasn't until she began her residence at a growing charter school in Brooklyn that Tempest realized what it took, and didn't cost, to develop a program that was engaging to students but manageable for a teacher... And that's really where Doodles was conceived.  Here we are - seeking to help the classroom teacher become the art teacher, without breaking the bank or costing hours of planning.</p>
+    </div>
+  </section>
+
+  <section class="doodles-academy">
+    <h2>Doodles Academy</h2>
+    <div class="section-text">
+      <p>Doodles Academy is a digital inventory of comprehensive, easy-to-use art lessons for schools, classrooms, teachers and students.</p>
+      <p>Simply put, it makes art education more accessible.</p>
+      <p>Doodles works to eliminate the barriers that too many teachers have in providing a high-quality arts education to their students. By creating an inventory of thoughtful and engaging art lessons, teachers assemble their curriculum-choosing the projects and activities they know are best for their students- and Doodles does the details.</p>
+    </div>
+    <div class="section-sidebar">
+      <%= image_tag 'doodles-section-sidebar', alt: 'Doodles Academy' %>
+    </div>
+  </section>
+
+  <section class="how-it-works">
+    <h2>How It Works</h2>
+    <ol>
+      <li>Teachers access Doodles' archive of easy-to-implement lesson plans, choosing activities and projects based on their classes' instructional and developmental goals.</li>
+      <li>Doodles generates lesson plans, supply lists, and how-to videos for teachers to take right into their classrooms.</li>
+      <li>Teachers watch as their students make the most of their artistic energy.</li>
+    </ol>
+  </section>
+
+  <section class="map-direction">
+    <div class="window-box">
+      <p>We create the map.</p>
+      <p>You choose the direction.</p>
+    </div>
   </section>
 </div>
