--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,20 +7,36 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <div id="top-nav-bar" class="large">
+  <div id="top-nav-bar" class="<%= yield(:nav_size_class) %>">
     <div id="top-nav-content">
       <%= image_tag 'logo-yellow-trans', class: 'logo', alt: 'Doodles Academy' %>
-      <ul id="top-nav-menu">
-        <li>Our Story</li>
-        <li>Donate</li>
-        <li>Sample</li>
-        <li>Contact</li>
-        <li>Our Board</li>
-        <li>Sign up</li>
-      </ul>
+      <div class="nav-menu linear">
+        <ul>
+          <li>Our Story</li>
+          <li>Donate</li>
+          <li>Sample</li>
+          <li>Contact</li>
+          <li>Our Board</li>
+          <li>Sign up</li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="nav-menu hanging">
+      <div class="hanging-menu-content">
+        <ul>
+          <li>Our Story</li>
+          <li>Donate</li>
+          <li>Sample</li>
+          <li>Contact</li>
+          <li>Our Board</li>
+          <li>Sign up</li>
+        </ul>
+      </div>
     </div>
   </div>
-<%= yield %>
+
+  <%= yield %>
 
 </body>
 </html>
