--- a/app/views/home/board.html.erb
+++ b/app/views/home/board.html.erb
@@ -1,5 +1,5 @@
 <% content_for(:nav_size_class) { 'small' } %>
-<div class="board">
+<div class="homepage">
   <section>
     <div class="portrait"></div>
     <div class="biography">
