--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,5 +38,11 @@
 
   <%= yield %>
 
+  <div id="footer">
+    <div class="footer-top">
+    </div>
+    <div class="footer-bottom">
+    </div>
+  </div>
 </body>
 </html>
