--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -1,3 +1,11 @@
-// Place all the styles related to the projects controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+div.projects {
+  position: relative;
+  width: $content-max-width;
+  margin: 200px auto 0 auto;
+
+  h1 {
+    text-align: right;
+    color: $primary-red;
+    text-transform: lowercase;
+  }
+}
