--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,2 +1,15 @@
-<h1>Projects#show</h1>
-<p>Find me in app/views/projects/show.html.erb</p>
+<div class="projects">
+  <section class="info">
+    <h1><%= @project.title %></h1>
+    <p class="description"><%= @project.description %></p>
+  </section>
+  <section class="gallery">
+
+  </section>
+  <section class="supplies">
+
+  </section>
+  <section class="supplmental">
+
+  </section>
+</div>
