More stylings for projects

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -50,6 +50,15 @@ body {
   font-family: $primary-body-font;
 }
 
+a {
+  color: $primary-blue;
+  text-decoration: none;
+
+  &:hover {
+    color: $primary-red;
+  }
+}
+
 p {
   line-height: 1.5em;
 }
