--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,7 +1,7 @@
 <% content_for(:nav_size_class) { 'small' } %>
 <div class="projects">
+  <h1><%= @project.title %></h1>
   <section class="synopsis">
-    <h1><%= @project.title %></h1>
     <h3>synopsis</h3>
     <p class="description"><%= @project.description %></p>
   </section>
@@ -12,14 +12,11 @@
   </section>
 
   <section class="gallery">
-
   </section>
 
   <section class="supplies">
-
   </section>
-  
-  <section class="supplmental">
 
+  <section class="supplemental">
   </section>
 </div>
