--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,6 +1,6 @@
 <% content_for(:nav_size_class) { 'small' } %>
 <div class="projects">
-  <h1><%= @project.title %></h1>
+  <h1 class="capitalize"><%= @project.title %></h1>
   <section class="synopsis">
     <h3>synopsis</h3>
     <p class="description"><%= @project.description %></p>
