Adding lesson plans to project show page

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -27,6 +27,7 @@
     </ul>
   </section>
 
-  <section class="supplemental">
+  <section class="lesson-plans">
+    <h3>lesson plans</h3>
   </section>
 </div>
