--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,43 +2,34 @@
 <html>
 <head>
   <title>Doodles</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag    'application', media: 'all' %>
+  <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
   <% @links = [] %>
-  <% @links.push({ name: "Our Story", path: "/our-story" }) %>
   <% @links.push({ name: "Donate", path: "/donors" }) %>
   <% @links.push({ name: "Contact", path: "/contact" }) %>
   <% @links.push({ name: "Our Board", path: "/board" }) %>
   <% @links.push({ name: "Sign Up", path: "/users/sign_up" }) %>
 </head>
 <body>
-  <div id="top-nav-bar" class="<%= yield(:nav_size_class) %>">
-    <div id="top-nav-content">
-      <%= image_tag 'logo-yellow-trans', class: 'logo', alt: 'Doodles Academy' %>
-      <div class="nav-menu linear">
-        <ul>
-          <% @links.each do |link| %>
-          <li><%= link_to link[:name], link[:path] %></li>
-          <% end %>
-        </ul>
-      </div>
+  <div class="nav" class="<%= yield(:nav_size_class) %>">
+    <div class="brand">
+      <a href="/"><%= image_tag 'logo-yellow-trans', class: 'logo', alt: 'Doodles Academy' %></a>
     </div>
-
-    <div class="nav-menu hanging">
-      <div class="hanging-menu-content">
-        <ul>
-          <% @links.each do |link| %>
-          <li><%= link_to link[:name], link[:path] %></li>
-          <% end %>
-        </ul>
-      </div>
+    <div class="nav-menu">
+      <ul>
+        <% @links.each do |link| %>
+        <a href="<%= link[:path] %>">
+          <li><%= link[:name] %></li>
+        </a>
+        <% end %>
+      </ul>
     </div>
   </div>
 
   <%= yield %>
 
-  <div id="footer">
+  <div class="footer">
     <div class="footer-top">
     </div>
     <div class="footer-bottom">
