--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,9 +1,10 @@
 <% content_for(:nav_size_class) { 'large' } %>
 <div class="homepage">
   <section class="hero">
-    <div class="window-box">
-      <p>Our mission is to provide the tools necessary for art lessons that inspire students to meet their creative potential.</p>
-    </div>
+    <img src="/assets/hero-image.jpg">
+    <p class="lead">
+      Our mission is to provide the tools necessary for art lessons that inspire students to meet their creative potential.
+    </p>
   </section>
 
   <section class="founder text-right">
@@ -37,10 +38,12 @@
     </ol>
   </section>
 
-  <section class="map-direction">
-    <div class="window-box">
-      <p>We create the map.</p>
-      <p>You choose the direction.</p>
+  <section class="hero">
+    <img src="/assets/map-direction-image.jpg">
+    <p class="lead">
+      We create the map. <br/>
+      You choose the direction.
+    </p>
     </div>
   </section>
 </div>
