--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,35 +7,66 @@
     </p>
   </section>
 
-  <section class="founder text-right">
-    <h2>The Founder</h2>
-    <div class="section-sidebar">
-      <%= image_tag 'founder-section-sidebar', alt: 'The Founder' %>
-    </div>
-    <div class="section-text">
-      <p>Fresh out of graduate school, Doodles' founder Tempest NeuCollins was navigating the art instructors' world of New York City... from train to train, through and outside of, and back into Manhattan, she was trying to maximize her reach as an art teacher. Through private classes, to ad-hoc programs in Title I schools who could only afford a piece-meal program at the time, Tempest saw the spectrum of arts education in New York City: incredibly costly and individualized or over-crowded with little opportunity for differentiation. It wasn't until she began her residence at a growing charter school in Brooklyn that Tempest realized what it took, and didn't cost, to develop a program that was engaging to students but manageable for a teacher... And that's really where Doodles was conceived.  Here we are - seeking to help the classroom teacher become the art teacher, without breaking the bank or costing hours of planning.</p>
-    </div>
-  </section>
-
-  <section class="doodles-academy">
-    <h2>Doodles Academy</h2>
-    <div class="section-text">
-      <p>Doodles Academy is a digital inventory of comprehensive, easy-to-use art lessons for schools, classrooms, teachers and students.</p>
-      <p>Simply put, it makes art education more accessible.</p>
-      <p>Doodles works to eliminate the barriers that too many teachers have in providing a high-quality arts education to their students. By creating an inventory of thoughtful and engaging art lessons, teachers assemble their curriculum-choosing the projects and activities they know are best for their students- and Doodles does the details.</p>
-    </div>
-    <div class="section-sidebar">
-      <%= image_tag 'doodles-section-sidebar', alt: 'Doodles Academy' %>
+  <section class="bg-accent-orange">
+    <div class="content">
+      <h2>Doodles Academy</h2>
+      <p class="lead">
+        A digital inventory of comprehensive, easy-to-use art lessons for schools, classrooms, teachers and students.
+      </p>
+      <p>Simply put, we're making art education more accessible.</p>
+      <p>Doodles Academy works to eliminate the barriers that too many teachers have in providing a high-quality arts education to their students. By creating an inventory of thoughtful and engaging art lessons, teachers assemble their curriculum-choosing the projects and activities they know are best for their students- and Doodles Academy takes care of the details.</p>
     </div>
   </section>
 
-  <section class="how-it-works">
-    <h2>How It Works</h2>
-    <ol>
-      <li>Teachers access Doodles' archive of easy-to-implement lesson plans, choosing activities and projects based on their classes' instructional and developmental goals.</li>
-      <li>Doodles generates lesson plans, supply lists, and how-to videos for teachers to take right into their classrooms.</li>
-      <li>Teachers watch as their students make the most of their artistic energy.</li>
-    </ol>
+  <section class="bg-accent-orange">
+    <div class="content">
+      <h2>Featured Videos</h2>
+      <p></p>
+      <div class="gallery">
+        <div class="images">
+          <div class="gallery-img">
+            <img src="/assets/map-direction-image.jpg">
+            <div class="gallery-play-btn"></div>
+            <div class="gallery-play-btn"></div>
+            <div class="gallery-img-title">
+              Lesson Title
+            </div>
+          </div>
+          <div class="gallery-img">
+            <img src="/assets/map-direction-image.jpg">
+<div class="gallery-play-btn"></div>
+            <div class="gallery-img-title">
+              Lesson Title
+            </div>
+          </div>
+          <div class="gallery-img">
+            <img src="/assets/map-direction-image.jpg">
+            <div class="gallery-play-btn"></div>
+            <div class="gallery-img-title">
+              Lesson Title
+            </div>
+          </div>
+          <div class="gallery-img">
+            <img src="/assets/map-direction-image.jpg">
+            <div class="gallery-play-btn"></div>
+            <div class="gallery-img-title">
+              Lesson Title
+            </div>
+          </div>
+          <div class="gallery-img">
+            <img src="/assets/map-direction-image.jpg">
+            <div class="gallery-play-btn"></div>
+            <div class="gallery-img-title">
+              Lesson Title
+            </div>
+          </div>
+        </div>
+        <div class="gallery-tools">
+          <div class="gallery-tools-next"></div>
+          <div class="gallery-tools-prev"></div>
+        </div>
+      </div>
+    </div>
   </section>
 
   <section class="hero">
@@ -44,6 +75,36 @@
       We create the map. <br/>
       You choose the direction.
     </p>
+  </section>
+
+  <section class="bg-accent-purple">
+    <div class="content">
+      <h2>Support Doodles Academy</h2>
+      <p class="lead">
+        Wow. This is so freaking awesome.
+      </p>
+      <a class="btn btn-large btn-orange">
+        Donate Here
+      </a>
     </div>
   </section>
+
+  <section class="hero">
+    <img src="/assets/founder-section-sidebar.jpg">
+    <p class="lead">
+      "Testimonial from someone here" <br/>
+      - Alex Hunley, Spectacular Person
+    </p>
+  </section>
+
+  <section class="bg-accent-green">
+    <div class="content">
+      <h2>Sign Up for our Newsletter</h2>
+      <p class="lead">
+        OMG! A Newsletter?
+      </p>
+      <a class="btn btn-large btn-purple">Sign Up Here</a>
+    </div>
+  </section>
+
 </div>
