--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,19 +1,22 @@
-div.homepage {
+.homepage {
   position: relative;
-  margin: 240px 0 0;
+  margin: 0;
 
   & > section {
     @include clearfix;
     width: 100%;
 
     h2 {
-      text-transform: lowercase;
-      color: $primary-red;
-      font-weight: 400;
-    }
+      text-transform: uppercase;
+      font-weight: 600;
+      font-size: 16px;
+      position: relative;
+      padding-top: 1.5em;
+      margin: 0;
 
-    &:not(:first-child) {
-      margin-top: 70px;
+      &:after {
+        content: "";
+      }
     }
 
     div.section-sidebar, div.section-text {
@@ -78,28 +81,28 @@ div.homepage {
 
   }
 
-  section:not(.hero) {
-    width: $content-max-width;
+  .content {
+    max-width: $content-max-width;
     margin: 0 auto;
-  }
+    padding-bottom: 2em;
 
-  section.text-right {
-    h2 {
-      text-align: right;
+    img {
+      width: 43%;
+      margin: 0 3% 3% 0;
+      float: left;
+    }
+
+    img.pull-right {
+      float: right;
     }
   }
 
+
   p.lead {
-    position: absolute;
-    max-width: 480px;
-    color: #fff;
-    top: 50%;
-    left: 50%;
-    transform: translate3d(-50%, -50%, 0);
     font-weight: 300;
     font-size: 28px;
+    display: block;
   }
-
 
   section.hero {
     max-height: 480px;
@@ -116,19 +119,13 @@ div.homepage {
     height: auto;
   }
 
-  section.how-it-works {
-    ol {
-      // list-style-position: inside;
-      color: white;
-      li {
-        background-image: url('ol-li-background-yellow.png');
-        background-size:100px;
-        // background-position: -5px;
-        background-repeat: no-repeat;
-        padding-left: 7px;
-        color: #000;
-      }
-    }
+  .hero p {
+    color: #fff;
+    position: absolute;
+    max-width: 600px;
+    top: 50%;
+    left: 50%;
+    transform: translate3d(-50%, -50%, 0);
   }
 
   h1 {
@@ -136,4 +133,64 @@ div.homepage {
     color: $primary-red;
     text-transform: lowercase;
   }
+
+
+  .gallery {
+    width: 100%;
+    height: 150px;
+    margin: 20px 0 0;
+
+    .gallery-img {
+      float: left;
+      background-color: black;
+      position: relative;
+
+      &:hover {
+        cursor: pointer;
+
+        img {
+          opacity: 0.4;
+        }
+
+        .gallery-play-btn {
+          border-top: 10px solid transparent;
+          border-bottom: 10px solid transparent;
+          border-left: 15px solid white;
+          position: absolute;
+          top: 45%;
+          left: 50%;
+          transform: translate3d(-50%, -50%, 0);
+        }
+
+        .gallery-img-title {
+          display: block;
+          position: absolute;
+          text-transform: uppercase;
+          top: 65%;
+          left: 50%;
+          transform: translate3d(-50%, -50%, 0);
+          text-align: center;
+          color: white;
+          z-index: 100;
+          font-size: 10px;
+        }
+      }
+    }
+
+    .gallery-img-title {
+      display: none;
+    }
+
+    .gallery-img img {
+      width: 150px;
+      height: auto;
+      margin: 0;
+      transition: opacity 300ms ease;
+    }
+
+    .gallery-img:not(:last-child) {
+      margin-right: 10px;
+    }
+  }
+
 }
