--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Doodles</title>
+  <title>
+    <% @page_title = yield(:page_title) %>
+    <% unless @page_title.blank? %>
+    <%= @page_title + " - " %>
+    <% end %>
+    Doodles Academy
+  </title>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700' rel='stylesheet' type='text/css'>
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= javascript_include_tag 'application' %>
