--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -65,7 +65,9 @@ a {
 }
 
 p {
+  font-size: 18px;
   line-height: 1.5em;
+  font-weight: 300;
 }
 
 
@@ -105,7 +107,7 @@ p {
 
     &.is-scrolled {
       visibility: visible;
-      z-index: 100;
+      z-index: 1;
       opacity: 1;
     }
 
