--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -81,25 +81,8 @@
 
   }
 
-  .content {
-    max-width: $content-max-width;
-    margin: 0 auto;
-    padding-bottom: 2em;
-
-    img {
-      width: 43%;
-      margin: 0 3% 3% 0;
-      float: left;
-    }
-
-    img.pull-right {
-      float: right;
-    }
-  }
-
-
   p.lead {
-    font-weight: 300;
+    font-weight: 400;
     font-size: 28px;
     display: block;
   }
@@ -128,69 +111,76 @@
     transform: translate3d(-50%, -50%, 0);
   }
 
+  .center {
+    text-align: center;
+  }
+
   h1 {
     text-align: right;
     color: $primary-red;
     text-transform: lowercase;
   }
+}
 
+.content {
+  max-width: $content-max-width;
+  margin: 0 auto;
+  padding-bottom: 2em;
+}
 
-  .gallery {
+.homepage-gallery {
+  @include grid(homepage-gallery-item);
+  height: 200px;
+}
+
+.homepage-gallery-item {
+
+  img {
     width: 100%;
-    height: 150px;
-    margin: 20px 0 0;
+    height: auto;
+    margin: 0;
+    transition: opacity 300ms ease;
 
-    .gallery-img {
-      float: left;
-      background-color: black;
-      position: relative;
-
-      &:hover {
-        cursor: pointer;
-
-        img {
-          opacity: 0.4;
-        }
-
-        .gallery-play-btn {
-          border-top: 10px solid transparent;
-          border-bottom: 10px solid transparent;
-          border-left: 15px solid white;
-          position: absolute;
-          top: 45%;
-          left: 50%;
-          transform: translate3d(-50%, -50%, 0);
-        }
-
-        .gallery-img-title {
-          display: block;
-          position: absolute;
-          text-transform: uppercase;
-          top: 65%;
-          left: 50%;
-          transform: translate3d(-50%, -50%, 0);
-          text-align: center;
-          color: white;
-          z-index: 100;
-          font-size: 10px;
-        }
-      }
-    }
-
-    .gallery-img-title {
-      display: none;
-    }
-
-    .gallery-img img {
-      width: 150px;
-      height: auto;
-      margin: 0;
-      transition: opacity 300ms ease;
-    }
-
-    .gallery-img:not(:last-child) {
-      margin-right: 10px;
-    }
   }
 
+  &:hover {
+    cursor: pointer;
+
+    img {
+      opacity: 0.4;
+    }
+  }
+}
+
+.homepage-gallery-item-play-btn {
+  display: none;
+  position: absolute;
+  $size: 20px;
+  border-top: $size solid transparent;
+  border-bottom: $size solid transparent;
+  border-left: (1.5*$size) solid white;
+  transform: translate3d(-50%, -50%, 0);
+  top: 50%;
+  left: 50%;
+
+  .homepage-gallery-item:hover & {
+    display: block;
+  }
+}
+
+.homepage-gallery-item-title {
+  display: none;
+  position: absolute;
+  text-transform: uppercase;
+  top: 65%;
+  left: 50%;
+  transform: translate3d(-50%, -50%, 0);
+  text-align: center;
+  color: white;
+  z-index: 1;
+  font-size: 10px;
+
+  .homepage-gallery-item:hover & {
+    display: block;
+  }
 }
