--- a/app/views/lessons/edit.html.erb
+++ b/app/views/lessons/edit.html.erb
@@ -1,2 +1,3 @@
-<h1>Lessons#edit</h1>
+<% content_for(:page_title) { @lesson.title } %>
+<h1>@lesson.title</h1>
 <p>Find me in app/views/lessons/edit.html.erb</p>
