--- a/app/views/lessons/index.html.erb
+++ b/app/views/lessons/index.html.erb
@@ -1,2 +1,3 @@
-<h1>Lessons#index</h1>
-<p>Find me in app/views/lessons/index.html.erb</p>
+<% content_for(:page_title) { ('Lessons') } %>
+
+<h1><%= @project.title %> Lessons</h1>
