--- a/app/views/lessons/new.html.erb
+++ b/app/views/lessons/new.html.erb
@@ -1,2 +1,3 @@
-<h1>Lessons#new</h1>
-<p>Find me in app/views/lessons/new.html.erb</p>
+<% content_for(:page_title) { ('Lessons') } %>
+
+<h1>New Lesson</h1>
