--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,4 +1,5 @@
 <% content_for(:nav_size_class) { 'small' } %>
+<% content_for(:page_title) { ('Projects') } %>
 <div class="projects">
   <h1>Available Projects</h1>
   <% @projects.each do |set| %>
